2006-12-24  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: more informative message when ipy_user_conf
	import fails (suggest running %upgrade).
	
2006-12-20  Ville Vainio  <vivainio@gmail.com>

	* 0.7.3 is out - merge all from 0.7.3 branch to trunk

	* ipapi.py: Add new ipapi method, expand_alias.
	
	* Release.py: Bump up version to 0.7.4.svn

2006-12-17  Ville Vainio  <vivainio@gmail.com>

	* Extensions/jobctrl.py: Fixed &cmd arg arg... 
	to work properly on posix too
	
	* Release.py: Update revnum (version is still just 0.7.3).

2006-12-15  Ville Vainio  <vivainio@gmail.com>

	* scripts/ipython_win_post_install: create ipython.py in
	prefix + "/scripts".
	
	* Release.py: Update version to 0.7.3.
    
2006-12-14  Ville Vainio  <vivainio@gmail.com>

	* scripts/ipython_win_post_install: Overwrite old shortcuts
	if they already exist

	* Release.py: release 0.7.3rc2
    
2006-12-13  Ville Vainio  <vivainio@gmail.com>

	* Branch and update Release.py for 0.7.3rc1

2006-12-13  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (IPShellWX): update for current WX naming
	conventions, to avoid a deprecation warning with current WX
	versions.  Thanks to a report by Danny Shevitz.

2006-12-12  Ville Vainio  <vivainio@gmail.com>

	* ipmaker.py: apply david cournapeau's patch to make
	import_some work properly even when ipythonrc does 
	import_some on empty list (it was an old bug!).

	* UserConfig/ipy_user_conf.py, UserConfig/ipythonrc:
	Add deprecation note to ipythonrc and a url to wiki
	in ipy_user_conf.py

		 
	* Magic.py (%run): %run myscript.ipy now runs myscript.ipy
	as if it was typed on IPython command prompt, i.e.
	as IPython script.
	
	* example-magic.py, magic_grepl.py: remove outdated examples

2006-12-11  Fernando Perez  <Fernando.Perez@colorado.edu>

        * IPython/iplib.py (debugger): prevent a nasty traceback if %debug
        is called before any exception has occurred.
	
2006-12-08  Ville Vainio  <vivainio@gmail.com>
